2004-02-06  Andreas Schwab  <schwab@suse.de>

	* posix/regcomp.c (build_range_exp): Fix off-by-one.
	(parse_bracket_exp): Likewise.

2004-02-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/kernel_stat.h: Define
	_HAVE_STAT_NSEC and _HAVE_STAT64_NSEC.  Patch by Anton Blanchard.

2004-02-02  Paolo Bonzini  <bonzini@gnu.org>

	* posix/regexec.c (check_matching): Add P_MATCH_FIRST parameter.
	(re_search_internal): Pass new parameter to check_matching.
	(check_matching): Unless a parenthesized group is found at the
	beginning of the regexp, advance P_MATCH_FIRST until we entered
	a state different from the initial state.

2004-02-01  Ulrich Drepper  <drepper@redhat.com>

	* math/libm-test.inc (lround_test): Add new test.
	(llround_test): Likewise.
	(lrint_test): Likewise.
	(llrint_test): Likewise.
	* sysdeps/ieee754/dbl-64/s_lround.c (__lround): Fix special case
	with result taking up 20 bits.
	* sysdeps/ieee754/dbl-64/s_lrint.c (__lrint): Likewise.
	* sysdeps/ieee754/dbl-64/s_llrint.c (__llrint): Likewise..
	* sysdeps/ieee754/ldbl-96/s_lroundl.c (__lroundl): Fix special
	case with result taking up 31 bits.
	* sysdeps/ieee754/ldbl-96/s_lrintl.c (__lrintl): Likewise.

	* po/nl.po: Update from translation team.

2004-01-30  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/ia64/bits/siginfo.h (ILL_BREAK,
	FPE_DECOVF, FPE_DECDIV, FPE_DECERR, FPE_INVASC, FPE_INVDEC,
	SEGV_PSTKOVF): Remove underscore prefix from definition.

2004-01-28  Paolo Bonzini  <bonzini@gnu.org>

	Merge regex changes in gawk.
	* posix/regcomp.c (build_range_exp) [!_LIBC]: Check validity
	of collation elements.
	* posix/regex.c: Include limits.h.
	* posix/regex.h: Document REG_ECOLLATE correctly.
	* posix/regex_internal.h [!_LIBC && !ENABLE_NLS]: Disable NLS.

2004-01-24  Andreas Jaeger  <aj@suse.de>

	* malloc/obstack.h: Import gnulib version.
	* malloc/obstack.c: Likewise.

2004-01-26  David Mosberger  <davidm@hpl.hp.com>
